--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,11 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/",
+      "methods": ["GET"],
+      "headers": {
+        "Access-Control-Allow-Origin": "https://spotify-apple-music-gamma.vercel.app"
+      }
     }
   ]
 }
